--- a/package.json
+++ b/package.json
@@ -1,15 +1,6 @@
 {
   "name": "piscines",
   "version": "1.0.0",
-  "description": "Site web pour Piscines du Rhin, spécialiste des piscines dans le Bas-Rhin (67).",
-  "main": "index.html",
-  "scripts": {
-    "build": "echo 'No build step required for static site'"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "vercel": "^50.5.0"
-  }
+  "description": "Site web pour Piscines du Rhin",
+  "scripts": {}
 }
