--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "cleanUrls": true,
-  "framework": null,
-  "outputDirectory": "."
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
